src/main/resources/public/css/mystyle.css
.yes-text {
  position: absolute;
  top: 10px;
  left: 10px;
  font-size: 30px;
  color: rgb(111, 250, 111);
  opacity: 0;
}
.no-text {
  position: absolute;
  top: 10px;
  right: 10px;
  font-size: 30px;
  color: rgb(255, 115, 115);
  opacity: 0;
}
.fade {
  -webkit-transition: 0.2s opacity linear;
  transition: 0.2s opacity linear;
  opacity: 0;
}
#work {
  padding-top: 25px;
}

#viewport {
  width: 600px;
  height: 600px;
  background: #C7433E;
  border: 10px solid #ED5D52;
  margin: 0px auto;
  position: relative;
}

#viewport .stackBack {
  width: 500px;
  height: 500px;
  background: #ED5D52;
  position: absolute;
  border-radius: 10px;
  margin-top: 40px;
  margin-left: 40px;
  z-index: 1;
}

.stackBackContent {
  position: absolute;
  width: 200px;
  height: 200px;
  margin-top: 150px;
  margin-left: 150px;
}

#viewport .stack {
  width: 500px;
  height: 500px;
  position: absolute;
  margin-top: 40px;
  margin-left: 40px;
  z-index: 10;
}

#viewport li {
  width: 500px;
  height: 500px;
  list-style: none;
  background: #fff;
  border-radius: 5px;
  position: absolute;
  top: 0;
  left: 0;
  box-shadow: 0 0 2px rgba(0, 0, 0, 0.2), 1px 1px 1px rgba(0, 0, 0, 0.2);
  line-height: 300px;
  text-align: center;
  border: 10px solid #ECECEC;
  box-sizing: border-box;
  cursor: default;
}
#viewport li.in-deck:nth-child(3) {
  top: 2px;
  transform: translate(2px, 2px) rotate(0.4deg);
}
#viewport li.in-deck:nth-child(2) {
  top: 4px;
  transform: translate(-4px, -2px) rotate(-1deg);
}

#viewport #control {
  position: absolute;
  bottom: 30px;
  left: 0;
  right: 0;
  text-align: center;
  font-size: 0;
}

#viewport li h2 {
  font-size: 40px;
}

#viewport li p {
  font-size: 14px;
}

#viewport #control button {
  background: #FFFFFF;
  color: #373737;
  font-weight: bold;
  border: none;
  font: normal 18px/24px'Helvetica Neue', Helvetica, Arial, freesans, sans-serif;
  margin: 0 5px;
  padding: 10px 15px;
  cursor: pointer;
  box-shadow: 0 2px 0 #63211F;
  outline: none;
  position: relative;
}

#viewport #control button:active {
  background: #63211F;
  color: #FFFFFF;
  bottom: -2px;
  box-shadow: none;
}

.picinfo {
  height: 50%;
  background-color: #000;
  color: #fff;
  padding: 10px;
}

.info-text {
  position: absolute;
  text-align: right;
  bottom: 50%;
  right: 6%;
  line-height: 28px;
}

.symbol {
  font-size: 40px !important;
}

.desc {
  height: 50%;
  padding: 10px;
  background-color: #fff;
  color: #000;
  text-align: left;
}

.desc p {
  font-size: 20px !important;
  line-height: 28px;
}

.none-left {
  font-size: 50px;
  line-height: 50px;
  color: #ccc;
}

#workLink {
  font-size: 1px;
}

.card-ct {
  position: absolute;
  top: 40%;
  margin: 30px;
  font-size: 100px;
}

#passes {
  left: 0;
  color: #666;
}

#picks {
  right: 0;
  color: #FF4E50;
}

.cap {
  font-size: 20px !important;
  line-height: 30px;
}

.portfolio-stock {
  border-radius: 10px;
  background-color: #fff;
  padding: 20px 30px;
  margin-bottom: 20px;
  text-align: left;
}

.portfolio-stock h2 {
  font-size: 50px;
}

.portfolio-stock p {
  font-size: 20px;
}

.portfolio-stock .left {
  float: left;
  width: 30%;
  padding: 30px;
}

.left td, .left tr {
  padding: 10px;
}

.portfolio-stock .right {
  width: 65%;
  padding: 30px;
  right: 0;
}

.stocks-list {
  margin: 0px auto;
  width: 80%;
}

